Final player adds

--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@ button {
 }
 
 .DEF {
-    background-color: brown;
+    background-color: rgb(19, 1, 1);
     color: white;
     font-weight: bold;
 }
