--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,7 @@ button {
     font-weight: bold;
 }
 
-.DEF {
+.DST {
     background-color: rgb(19, 1, 1);
     color: white;
     font-weight: bold;
